<resources>
    <string name="app_name">Calculator</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="number_dot">.</string>
    <string name="operation_result">=</string>
    <string name="operation_delete">DEL</string>
    <string name="operation_divide"> ÷ </string>
    <string name="operation_mul"> × </string>
    <string name="operation_sum"> + </string>
    <string name="operation_sub"> - </string>
    <string name="operator_open_bracket"> ( </string>
    <string name="operator_close_bracket"> ) </string>
    <string name="egg">there is nothing interesting</string>\
    <string name="result">= %.2f</string>

</resources>
